@@ -1,3 +1,15 @@
+2010-05-07  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Daniel Bates.
+
+        rollout commands fail when commit is missing bug number
+        https://bugs.webkit.org/show_bug.cgi?id=38791
+
+        * Scripts/webkitpy/tool/commands/download.py:
+         - _commit_info failed to actually return the CommitInfo in the no-bug-id case.
+        * Scripts/webkitpy/tool/commands/download_unittest.py:
+         - Test that the fix worked.
+
 2010-05-07  Darin Fisher  <darin@chromium.org>
 
         Fix build bustage: toElement<T> should be to<T>.
